--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </div>
     </header>
-    <main>
 
+    <main>
         <!-- Hero section -->
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
 
-        <!-- What are we doing -->
+        <!-- Our advantages -->
         <section>
-            <ul>
+            <ul> 
                 <li>
                     <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -55,7 +55,8 @@
                 </li>
             </ul>
         </section>
-        
+
+        <!-- What are we doing -->
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
